# spider_transformations

./: .gitignore  Cargo.toml  README.md  build.rs
src/: html2xml.rs  lib.rs  markup5ever_rcdom.rs
src/html2text/: mod.rs
src/html2text/render/: text_renderer.rs
src/transformation/: chunking.rs  content.rs  mod.rs  text_extract.rs
src/transformation/audio/: mod.rs
src/transformation/document/: docx.rs  mod.rs  pptx.rs  xlsx.rs
