[package]
name = "spider_transformations"
version = "2.38.0"
authors = ["j-mendez <jeff@spider.cloud>"]
readme = "README.md"
description = "Transformation utils to use for spider"
repository = "https://github.com/spider-rs/spider_transformations"
homepage = "https://github.com/spider-rs/spider_transformations"
keywords = ["crawler", "spider", "transformations"]
categories = ["web-programming", "command-line-utilities"]
license = "MIT"
edition = "2021"

[dependencies]
indexmap = { version = "1", optional = true }
aho-corasick = "1"
regex = "1"
html5ever = "0.27"
unicode-width = "0.2"
markup5ever = "0.12"
tendril = "0.4"
llm_readability = "0"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
fast_html2md = { version = "0", features = ["stream", "rewriter"] }
phf = "0.11"
phf_codegen = "0.11"
lol_html = { version = "2" }
spider_scraper = "0.1"
base64 =  {version = "0.22", optional = true }
url = "2"
auto_encoder = "0.1"
calamine = { version = "0.26", optional = true }
zip = { version = "2", optional = true, default-features = false, features = ["deflate"] }
quick-xml = { version = "0.37", optional = true }

[dependencies.spider]
version = "2.47.12"
default-features = false

[dev-dependencies]
maud = "0.26"

[features]
default = ["serde"]
indexset = ["indexmap"]
serde = ["indexmap/serde", "spider/serde"]
clippy = []
screenshot = [ "dep:base64", "spider/chrome", "spider/cookies", "spider/real_browser"]
document = ["dep:calamine", "dep:zip", "dep:quick-xml"]